--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <div id="principale">
                 <p>Ecco a te: <span id="password-completa"></span>19</p>
             </div>
+            <div id="ape">
+                <img src="http://www.pngmart.com/files/8/Bee-Transparent-PNG.png" alt="">
+                <p>Il nostro generatore di password è all' avanguardia, non solo prende le tue informazioni e le mette una di fianco all' altra, ma inserisce anche un impensabile numero 19. Se vuoi aiutarci a crescere puoi usare il nostro patreon! </p>
+            </div>
         </main>
         <script src="main.js" charset="utf-8"></script>
     </body>
